--- a/templates/therapists.html
+++ b/templates/therapists.html
@@ -40,7 +40,7 @@
   </div>
   <!-- Therapist Cards & Pagination -->
   <div class="flex flex-col gap-2 py-8 px-2 sm:px-4" style="background-color: #FFF6ED;">
-    {% for therapist in therapists %}
+    {% for therapist in therapists|dictsort:"distance" %}
       {% include "partials/therapist_card.html" with therapist=therapist %}
     {% empty %}
       <div class="col-span-full text-center text-[#555B6E] text-lg">No therapists found matching your criteria.</div>
